--- a/nft-front-react/src/styles/App.css
+++ b/nft-front-react/src/styles/App.css
@@ -6,7 +6,6 @@
 }
 
 .container {
-  height: 100%;
   background-color: #0d1116;
   display: flex;
   flex-direction: column;
@@ -72,6 +71,10 @@
 }
 
 .footer-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
