--- a/nft-front-react/src/styles/App.css
+++ b/nft-front-react/src/styles/App.css
@@ -1,21 +1,27 @@
 
 
 .App {
-  height: 100vh;
   background-color: #0d1116;
   overflow: scroll;
-  text-align: center;
+  position: relative;
+  min-height: 100vh;
+
 }
 
-.container {
+.content-wrap{
+  padding-bottom: 2.5rem;
+}
+
+.container-base {
   background-color: #0d1116;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
 }
 
 .header-container {
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 .header {
@@ -76,11 +82,12 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 50px;
+  height: 2.5rem;   
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
   padding-bottom: 30px;
+  padding-top: 20px;
 }
 
 .twitter-logo {
